Preview Deployment (#2)
* feature: fix preview environment setup

* doc: added modern-css skill reference

* feature: small feature branch deployment improvements

* feature: small feature branch deployment improvements

* feature: small feature branch deployment improvements

* feature: extract everything in its own `preview` environment

* feature: harden setup

* feature: streamline deployment for `preview` and other environments

* feature: streamline deployment for `preview` and other environments

* feature: refactored applications based on architecture definitions

* fix: also build api's when running tests in ci

* fix: api generation in build

* fix: api generation in build

* fix: only send token to `/api` endpoints

* fix: only send token to `/api` endpoints

---------
