# breadly-backend/src/server.ts
@@ -1,7 +1,8 @@
-import {app} from "./app.js";
-import 'dotenv/config'
-import {ApplicationDatabase} from "./database/application-database.js";
-import {MONGODB_CONFIG} from "./database/mongodb.config.js";
+import {app} from './app.js';
+import 'dotenv/config';
+import {ApplicationDatabase} from './database/application-database.js';
+import {MONGODB_CONFIG} from './database/mongodb.config.js';
+import {logger} from './common/logger.js';
 
 const PORT = process.env['PORT'] ?? 3000;
 
@@ -12,7 +13,7 @@ const startServer = async () => {
     );
 
     app.listen(PORT, () => {
-        console.log('Server is running on port 3000');
+        logger.info(`Server is running on port ${PORT}`);
     });
 };
 
