# breadly-frontend/src/app/features/recipes/recipes.routes.ts
@@ -1,0 +1,4 @@
+import { Routes } from '@angular/router';
+import { RecipesListContainerComponent } from './containers/recipes-list.container';
+
+export const RECIPES_ROUTES: Routes = [{ path: '', component: RecipesListContainerComponent }];
